# RTCProject

./: .gitignore  CMakeLists.txt  README.md  builddeps.py  deps.json  webrtc_static_lib.py
assets/css/: style.css
doc/mediasoup/: Mediasoup源码分析之Mediasoup启动过程.md  Mediasoup相关文章.md  libmediasoupclient_compile.md  mediasoup.md  mediasoup传递信令.md  mediasoup传递信令与协议.md  mediasoup服务器连接、接收、发送.md  mediasoup流程.md  mediasoup源码分析-初始化、建立连接及媒体数据的处理流程.md
doc/mediasoup/mediasoup源码分析-初始化、建立连接及媒体数据的处理流程/: mediasoup信令分析.xlsx  request.txt  response.txt
libs/asio/: CMakeLists.txt
libs/asio/impl/: src.hpp
libs/asio/ip/: basic_resolver_results.hpp  icmp.hpp
libs/httplib/: CMakeLists.txt
libs/kcp/: CMakeLists.txt
libs/lua/: CMakeLists.txt  lua.c  luac.c
libs/magic_enum/: CMakeLists.txt
libs/nlohmann/: CMakeLists.txt
libs/nlohmann_json_reflect/: CMakeLists.txt  json_reflect.hpp
libs/sdptransform/: CMakeLists.txt  sdptransform.hpp
libs/sigslot/: CMakeLists.txt  sigslot.h
libs/websocketpp/: CMakeLists.txt
plist/: Info.plist.in
src/: app.cc  app.h  main.cc
src/core/: CMakeLists.txt  rtc_call.cc  rtc_call.h  rtc_call_emun.h  rtc_call_interface.h  rtc_call_observer_interface.h  rtc_config.cc  rtc_config.h  rtc_emun.h  rtc_macro.h  rtc_object.h
src/core/internal/: rtc_file_logger.cc  rtc_file_logger.h  rtc_internal_observer.cc  rtc_internal_observer.h  rtc_util.cc  rtc_util.h
src/core/model/: rtc_peer_stats_model.h  rtc_peer_status_model.h
src/engine/: CMakeLists.txt  engine.cc  engine.h  engine_interface.h  room.cc  room.h
src/engine/builder/: sdp_builder.cc  sdp_builder.h  sdp_media_builder.cc  sdp_media_builder.h
src/engine/render/: gl_defines.h  i420_texture_cache.cc  i420_texture_cache.h  video_shader.cc  video_shader.h
src/engine/sdp/: sdp.cc  sdp.h
src/engine/signalings/: signaling.cc  signaling.h  signaling_enum.cc  signaling_enum.h  signaling_manager.cc  signaling_manager.h  signaling_socket.cc  signaling_socket.h
src/foundation/: CMakeLists.txt  foundation.h  foundation_define.h  notification_center.cc  notification_center.h  singleton.h  watchdog.h
src/log/: CMakeLists.txt  log_file_manager.cc  log_file_manager.h  logging.cc  logging.h
src/network/: CMakeLists.txt  socket.cc  socket.h  socket_factory.cc  socket_factory.h  socket_interface.h  web_socket.cc  web_socket.h
src/platform/: CMakeLists.txt  platform.cc  platform.h
src/util/: CMakeLists.txt  threadsafe_queue.hpp  timer.cc  timer.h  util.cc  util.h
src/view/: CMakeLists.txt  window.cc  window.h
test/: CMakeLists.txt  unit_test.cc
test/engine/: sdp_test.cc  signaling_test.cc
webrtc/include/api/: peer_connection_interface.h
